@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-29T00:58:10Z",
-  "count_outdated" : 107,
-  "uniques_outdated" : 89,
+  "timestamp" : "2025-08-30T00:55:06Z",
+  "count_outdated" : 108,
+  "uniques_outdated" : 90,
   "count" : 110,
   "uniques" : 92,
   "clones" : [
-    {
-      "timestamp": "2025-08-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-17T00:00:00Z",
       "count": 1,
